# cel-brief

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: build.rs
examples/: governance.rs  no_cellar.rs  standalone.rs  with_memory.rs
src/: budget.rs  builder.rs  error.rs  governance.rs  lib.rs  receipt.rs  source.rs  tokenizer.rs  types.rs
src/sources/: history.rs  memory.rs  mod.rs  perception.rs  receipt.rs  system_prompt.rs  tool_catalog.rs  user_message.rs
